Added GetNumberOfLower to count how many lowercase letters in a string

--- a/UppercaseCounter/UppercaseCounter/ErrorMessage.html
+++ b/UppercaseCounter/UppercaseCounter/ErrorMessage.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Systemfel</h1>
     <p>Det har uppstått ett fel som inte kan hanteras på server. Var god försök igen.</p>
+    <a href="Default.aspx">Tillbaka till startsidan.</a>
 </body>
 </html>
